# $Id$

2006-03-03	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/VoodooDaoWorker.class.php,
	main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/TransparentDaoWorker.class.php: fourth dao worker
	implemented: lockingless, transparent, greedy and damn fast.

2006-03-01	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/DAOs/NamedObjectDAO.class.php: typo spotted.

	* core/Base/NamedObject.class.php: now IdentifiableObject's child.

2006-02-22	Sergey S. Sergeev	<webs.support@gmail.com>

	* main/Utils/HeaderUtils.class.php: bugfixed access to undeclared
	static property.

	* main/DAOs/CommonDaoWorker.class.php,
	main/DAOs/BaseDaoWorker.class.php: uncacheByQuery() moved to
	BaseDaoWorker.

	* main/DAOs/GenericDAO.class.php, main/DAOs/BaseDAO.class.php:
	uncacheByQuery() implemented.

2006-02-20	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/MyDialect.class.php: is now compatible with MySQL-4.

	* core/DB/ImaginaryDialect.class.php: removed unnecessary quoting
	stuff, since we're using it only for internal purposes.

2006-02-16	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/Form.class.php: import/export object is now compatible
	with php-5.0.

2006-02-16	Denis Gabaidulin	<gabaden@gmail.com>

	* core/Form/StripTagsFilter.class.php: support for tags exclusion.

2006-02-15	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/DB/: correct handling for MySQL's forcing of single queries.

	* main/Containers/UnifiedContainer.class.php: wrong list/clones
	default fixed.

2006-02-08	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Base/ImageType.class.php, core/Form/PrimitiveImage.class.php:
	image uploading helpers.

	* 0.2.8 released.

2006-02-04	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* core/Form/Form.class.php: reflection-based object exporter.

2006-02-02	Konstantin V. Arkhipov	<voxus@shadanakar.org>

	* main/Module/EditorModule.class.php: allow selfRedirect() tweaking.
